# test-repo

./: CMakeLists.txt
.github/workflows/: main.yml
project/: CMakeLists.txt
project/src/: main.c  matrix.c
project/tests/: CMakeLists.txt
project/tests/src/: test.cpp
